--- a/src/app/modules/clientes/pages/historial-clinico/historial-clinico.html
+++ b/src/app/modules/clientes/pages/historial-clinico/historial-clinico.html
@@ -263,7 +263,7 @@
 
                     <div class="detalle-item">
                         <span class="detalle-label">DP:</span>
-                        <span class="detalle-value">{{ historialClinico.dp ?? '-' }}</span>
+                        <span class="detalle-value">{{ historialClinico.dp }}</span>
                     </div>
 
                     <div class="detalle-item">
