--- a/src/app/modules/ventas/crear-venta/crear-venta.html
+++ b/src/app/modules/ventas/crear-venta/crear-venta.html
@@ -179,7 +179,7 @@
     </div>
 
     <div class="t-table-row t-small" *ngFor="let it of facturaParaImprimir.items; let i = index">
-        <span class="t-cell">{{ i + 1 }}</span>
+        <span class="t-cell">{{ it.codigo || it.productoId || i + 1 }}</span>
         <span class="t-cell t-cut">{{ it.nombre }}</span>
         <span class="t-cell t-right">{{ it.cantidad }}</span>
         <span class="t-cell t-right">{{ it.precioUnitario | number:'1.2-2' }}</span>
