--- a/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
+++ b/src/app/modules/clientes/pages/crear-historial-clinico/crear-historial-clinico.html
@@ -106,6 +106,14 @@
                             <label>Eje</label>
                             <input type="number" step="1" min="0" max="180" formControlName="odEje" appEnterNext>
                         </div>
+                        <div class="input-group">
+                            <label>AVSC</label>
+                            <input type="number" step="0.05" formControlName="odAVSC" placeholder="0.00" appEnterNext>
+                        </div>
+                        <div class="input-group">
+                            <label>AVCC</label>
+                            <input type="number" step="0.05" formControlName="odAVCC" placeholder="0.00" appEnterNext>
+                        </div>
                     </div>
                 </div>
 
@@ -124,6 +132,14 @@
                         <div class="input-group">
                             <label>Eje</label>
                             <input type="number" step="1" min="0" max="180" formControlName="oiEje" appEnterNext>
+                        </div>
+                        <div class="input-group">
+                            <label>AVSC</label>
+                            <input type="number" step="0.05" formControlName="oiAVSC" placeholder="0.00" appEnterNext>
+                        </div>
+                        <div class="input-group">
+                            <label>AVCC</label>
+                            <input type="number" step="0.05" formControlName="oiAVCC" placeholder="0.00" appEnterNext>
                         </div>
                     </div>
                 </div>
